--- a/index.html
+++ b/index.html
@@ -1,3 +1,79 @@
-<html>
-<h1> Hell </h1>
-</html>
+
+<html></html>
+<head>
+<style>
+.first {
+color: white;
+background-color: green
+       }
+.second {
+color: red;
+background-color: blue
+}
+.tabletask {
+color: green
+background-color:yellow
+}
+.tabletask:hover {
+color: white;
+background-color: black
+}
+ul  {
+color: white;
+background-color: black
+font-size=10px
+}
+
+
+</style>
+</head>
+<body>
+<h1>Var Khoroshevsky N.E. IU4-11b </h1>
+<div>
+<h2> Task 1 </h2>
+<p class=first> 1-st style </p>
+<p class=second> 2-nd style</p>
+</div>
+<div>
+<h2> Task 2 </h2>
+<table>
+   <tr>
+    <th>Ячейка 1</th>
+    <th>Ячейка 2</th>
+	<th>Ячейка 3</th>
+   </tr>
+   <tr class=tabletask>
+    <th>Ячейка 4</th>
+    <th>Ячейка 5</th>
+	<th>Ячейка 6</th>
+   </tr>
+   <tr class=tabletask>
+    <th>Ячейка 7</th>
+    <th>Ячейка 8</th>
+	<th>Ячейка 9</th>
+   </tr>
+   </table>
+   
+</div>
+<div>
+<ol>
+<li>
+<ul>
+<li> 1-st position</li>
+<li>2-nd position</li>
+</ul>
+</li>
+<li>
+<ul>
+<li> 1-st position</li>
+<li>2-nd position</li>
+</ul>
+</li><li>
+<ul>
+<li> 1-st position</li>
+<li>2-nd position</li>
+</ul>
+</li>
+</ol>
+</div>
+</body>
