--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ font-size=10px
 </style>
 </head>
 <body>
-<h1>Var Khoroshevsky N.E. IU4-11b </h1>
+<h1>Var3 Khoroshevsky N.E. IU4-11b </h1>
 <div>
 <h2> Task 1 </h2>
 <p class=first> 1-st style </p>
